Updated to Qt5.11.0 and added more build scripts.

--- a/IfcBridgeGenerator/CMakeLists.txt
+++ b/IfcBridgeGenerator/CMakeLists.txt
@@ -49,4 +49,4 @@ install(TARGETS OpenInfraPlatform.IfcBridgeGenerator
    COMPONENT oip_runtime
 )
 # Use the Widgets module from Qt 5.
-qt5_use_modules(OpenInfraPlatform.IfcBridgeGenerator Widgets Xml XmlPatterns)
+target_link_libraries(OpenInfraPlatform.IfcBridgeGenerator Qt5::Widgets Qt5::Xml Qt5::XmlPatterns)
